[package]
name = "tomato"
version = "0.1.0"
authors = ["Anupam Ashish Minz <anupamminz300am@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
notify-rust = "4.5.0"
psimple = { package = "libpulse-simple-binding", version = "2.23.0" }
pulse = { package = "libpulse-binding", version = "2.23.1" }
